Login form validation

--- a/SurveyTool/WebContent/_locales/lang_en.properties
+++ b/SurveyTool/WebContent/_locales/lang_en.properties
@@ -15,6 +15,14 @@ master.footer.content=Project disclaimer & logos. Lorem Ipsum es simplemente el 
 # Buttons
 #******************
 
+msg.error.empty_fields=Should fill all fields.
+msg.error.login.empty.username=Type your username
+msg.error.login.empty.password=Type your password
+
+#******************
+# Buttons
+#******************
+
 button.accept=Accept
 button.add_content.question=Question
 button.add_content.body=Body content
@@ -79,6 +87,8 @@ user_panel.link.settings=Panel settings
 survey_manager.title=Survey Manager
 survey_manager.tab.surveys=Surveys
 survey_manager.tab.polls=Polls
+
+survey_manager.table.content.none=none
 
 #Surveys
 survey_manager.surveys.title=Surveys
