language from browser settings

--- a/SurveyTool/WebContent/_locales/lang_es.properties
+++ b/SurveyTool/WebContent/_locales/lang_es.properties
@@ -3,7 +3,7 @@
 #******************
 
 master.header.title=Survey Tool & User Panel
-master.header.subtitle=Participate in surveys you are interested in
+master.header.subtitle=Participe en las encuestas de su interés.
 master.footer.link.about=About P4A_Survey
 master.footer.link.legal=Legal disclaimer
 master.footer.link.cookies=Cookies policy
