accessibility, all browsers, create poll complete and other issues

--- a/SurveyTool/WebContent/_locales/lang_en.properties
+++ b/SurveyTool/WebContent/_locales/lang_en.properties
@@ -40,6 +40,7 @@ button.remove_option=Remove option
 button.remove_question=Remove question
 button.send=Send
 button.submit=Submit
+button.survey_preview=Survey preview
 button.vote=Vote
 
 button.aria_label.add_content=Add new content
