--- a/SurveyTool/WebContent/_locales/lang_en.properties
+++ b/SurveyTool/WebContent/_locales/lang_en.properties
@@ -42,6 +42,8 @@ button.send=Send
 button.submit=Submit
 button.survey_preview=Survey preview
 button.vote=Vote
+button.remove_section=Remove section
+button.hide_section=Hide section
 
 button.aria_label.add_content=Add new content
 
@@ -153,7 +155,7 @@ survey.edit.info.aria_label.copy=Copy survey URL to clipboard
 survey.edit.info.label.project=for project
 survey.edit.info.label.short_description=Short description
 survey.edit.info.label.url=Survey URL
-survey.edit.section.title=Questions
+survey.edit.section.title=Section title
 
 #******************
 # Poll
