--- a/SurveyTool/WebContent/_locales/lang_en2.properties
+++ b/SurveyTool/WebContent/_locales/lang_en2.properties
@@ -2,14 +2,14 @@
 # Master Page
 #******************
 
-master.header.title=Accessible user feedback tools
-master.header.subtitle=Building sustainable meaningful consumer-developer connections
+master.header.title=Survey Tool & User Panel
+master.header.subtitle=Participate in surveys you are interested in
 master.footer.link.about=About P4A_Survey
 master.footer.link.legal=Legal disclaimer
 master.footer.link.cookies=Cookies policy
 master.footer.link.accessibility=Accessibility
 master.footer.link.contact=Contact information
-master.footer.content=This service is provided by ILUNION Technology & Accessibility in the context of the Prosperity4All project. This project has received funding from the European Union\u2019s Seventh Framework Programme for research, technological development and demonstration under grant agreement no 610510.
+master.footer.content=Project disclaimer & logos. Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen.
 
 #******************
 # Buttons
@@ -39,7 +39,6 @@ button.remove_file=Remove file
 button.remove_option=Remove option
 button.remove_question=Remove question
 button.send=Send
-button.login=Login
 button.submit=Submit
 button.survey_preview=Survey preview
 button.vote=Vote
@@ -95,8 +94,8 @@ survey_manager.tab.polls=Polls
 survey_manager.table.content.none=none
 
 #Surveys
-survey_manager.surveys.title=Online survey tool
-survey_manager.surveys.description=<p>Here you can create and share online surveys. Currently, surveys can include three different types of questions: text questions, multiple choice questions (checkboxes) and simple choice questions (radiobuttons).</p><p>Click on <strong>Create new</strong> to design your first survey!</p>
+survey_manager.surveys.title=Surveys
+survey_manager.surveys.description=<p>Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen. No sólo sobrevivió 500 años, sino que tambien ingresó como texto de relleno en documentos electrónicos, quedando esencialmente igual al original. Fue popularizado en los 60s con la creación de las hojas "Letraset", las cuales contenian pasajes de Lorem Ipsum, y más recientemente con software de autoedición, como por ejemplo Aldus PageMaker, el cual incluye versiones de Lorem Ipsum.</p><p>Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen.</p>
 survey_manager.surveys.table.caption=Surveys list
 survey_manager.surveys.table.column.deadline=*Deadline*
 survey_manager.surveys.table.column.survey=Survey
@@ -105,8 +104,8 @@ survey_manager.surveys.table.column.actions=Actions
 survey_manager.surveys.msg.no_surveys=There are not surveys created by you.
 
 #Polls
-survey_manager.polls.title=Online polling tool
-survey_manager.polls.description=<p>Here you can create and share online polls. Currently, online polls include the following features:</p><ul class="list-content"><li>Polls as simple choice questions (radiobuttons)</li><li>Current results are shown automatically after voting</li><li>Polls can be personalized including an acknowledgement text and an a link to direct users for further feedback (e.g. to product page)</li></ul><p>Click on Create new to design your first online poll!</p>
+survey_manager.polls.title=Polls
+survey_manager.polls.description=<p>Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen. No sólo sobrevivió 500 años, sino que tambien ingresó como texto de relleno en documentos electrónicos, quedando esencialmente igual al original. Fue popularizado en los 60s con la creación de las hojas "Letraset", las cuales contenian pasajes de Lorem Ipsum, y más recientemente con software de autoedición, como por ejemplo Aldus PageMaker, el cual incluye versiones de Lorem Ipsum.</p><p>Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen.</p>
 survey_manager.polls.table.caption=Polls list
 survey_manager.polls.table.column.deadline=*Deadline*
 survey_manager.polls.table.column.poll=Poll
