pagination and searchv2

--- a/SurveyTool/WebContent/_locales/lang_en.properties
+++ b/SurveyTool/WebContent/_locales/lang_en.properties
@@ -235,6 +235,7 @@ profile.password = Password
 profile.repeat.password = Repeat password
 profile.email = Email
 profile.save = Save
+profile.cancel = Cancel
 
 profile.confirm.update.msg = Profile data have been updated successful.
 profile.confirm.update.title = Confirmation profile data
