--- a/SurveyTool/WebContent/_locales/lang_es.properties
+++ b/SurveyTool/WebContent/_locales/lang_es.properties
@@ -22,6 +22,18 @@ msg.error.login.email=Type a valid email
 msg.error.login.empty.password=Type your password
 msg.error.login.repassword=This field does not match the password
 
+msg.error.newsurvey.title=Type a Survey title
+msg.error.newsurvey.project=Type a project name
+msg.error.section.title = Type a section name
+
+msg.error.qstatement.text=Type a Question statement
+msg.error.question.title=Type a Question title
+
+msg.error.poll.title=Type a Poll title
+msg.error.poll.project=Type a project name
+
+msg.error.poll.option=Type a option text
+
 #******************
 # Buttons
 #******************
