--- a/SurveyTool/WebContent/_locales/lang_en.properties
+++ b/SurveyTool/WebContent/_locales/lang_en.properties
@@ -245,6 +245,7 @@ profile.title = Profile User
 profile.username = Username
 profile.password = Password
 profile.repeat.password = Repeat password
+profile.select.language = Select Language
 profile.email = Email
 profile.save = Save
 profile.cancel = Cancel
