--- a/SurveyTool/WebContent/_locales/lang_es.properties
+++ b/SurveyTool/WebContent/_locales/lang_es.properties
@@ -230,8 +230,8 @@ confirmation.remove.message=Are you sure to remove <span class="elem-to-remove-t
 #******************
 # header
 #******************
-header.hello = Hello
-header.edit.profile = Edit my profile
+header.hello = Hola
+header.edit.profile = Editar mi perfil
 header.log.out = Log out
 header.log.out.message = Are you sure you want to logout?
 header.log.out.yes = Yes
@@ -244,6 +244,7 @@ profile.title = Profile User
 profile.username = Username
 profile.password = Password
 profile.repeat.password = Repeat password
+profile.select.language = Select Language
 profile.email = Email
 profile.save = Save
 profile.cancel = Cancel
