--- a/SurveyTool/WebContent/_locales/lang_en.properties
+++ b/SurveyTool/WebContent/_locales/lang_en.properties
@@ -160,6 +160,11 @@ question.form.scale.liker_legend.t_disgree=Totally disgree
 question.form.scale.liker_legend.indiferent=Indiferent
 question.form.scale.liker_legend.t_agree=Totally agree
 
+question.form.options = Options
+question.form.type = Type
+question.form.scale.likert = Likert scale
+question.form.example = Example Q.1
+
 #******************
 # Survey
 #******************
@@ -245,7 +250,7 @@ profile.title = Profile User
 profile.username = Username
 profile.password = Password
 profile.repeat.password = Repeat password
-profile.select.language = Select Language
+profile.select.language = Language
 profile.email = Email
 profile.save = Save
 profile.cancel = Cancel
