--- a/SurveyTool/WebContent/_locales/lang_es.properties
+++ b/SurveyTool/WebContent/_locales/lang_es.properties
@@ -79,6 +79,10 @@ language.es=Español
 placeholder.type_here=Escriba aquí_
 label.yes=Si
 label.no=No
+login.invalid = Nombre de usuario o contraseña invalido
+register.invalid = Nombre de usuario o contraseña invalido
+register.exists.email = Este correo electronico ya existe en el sistema
+register.exists.username = Este nombre de usuario ya existe en el sistema
 
 #******************
 # Home
@@ -286,3 +290,21 @@ profile.cancel = Cancelar
 profile.confirm.update.msg = Los datos del perfil se han actualizado correctamente.
 profile.confirm.update.title = Confirmación datos perfil
 profile.button.accept = Aceptar
+
+#******************
+# Types suveys
+#******************
+survey.select.question.type= Selecciona un tipo de pregunta
+survey.type.text= Texto
+survey.type.simple= Simple
+survey.type.multiple= Multiple
+survey.type.scale= Escale
+survey.type.ordering= Orden
+survey.type.grading= clasificación
+survey.type.matrix= Matriz
+survey.type.code= Codigo
+
+survey.type.options= Opciones
+survey.type.type= Tipo
+survey.type.example= Ejemplo P.1
+survey.type.option= Opcion
