--- a/SurveyTool/WebContent/_locales/lang_en.properties
+++ b/SurveyTool/WebContent/_locales/lang_en.properties
@@ -79,6 +79,10 @@ language.es=Spanish
 placeholder.type_here=Type here_
 label.yes=Yes
 label.no=No
+login.invalid = Invalid username or password
+register.invalid = Invalid username or password
+register.exists.email = This email already exists in the system
+register.exists.username = This username already exists in the system
 
 #******************
 # Home
@@ -258,3 +262,21 @@ profile.cancel = Cancel
 profile.confirm.update.msg = Profile data have been updated successful.
 profile.confirm.update.title = Confirmation profile data
 profile.button.accept = Accept
+
+#******************
+# Types suveys
+#******************
+survey.select.question.type= Select question type
+survey.type.text= Text
+survey.type.simple= Simple
+survey.type.multiple= Multiple
+survey.type.scale= Scale
+survey.type.ordering= Ordering
+survey.type.grading= Grading
+survey.type.matrix= Matrix
+survey.type.code= Code
+
+survey.type.options= Options
+survey.type.type= Type
+survey.type.example= Example Q.1
+survey.type.option= Option
