--- a/SurveyTool/WebContent/_locales/lang_en.properties
+++ b/SurveyTool/WebContent/_locales/lang_en.properties
@@ -179,6 +179,7 @@ survey.new.label.survey_title=Survey title
 survey.new.label.project=for project
 survey.new.label.short_description=Short description (Optional)
 survey.new.placeholder.project=Insert project name_
+survey.new.default.language = Default language
 
 survey.edit.tab.go_edit=Go to edit survey
 survey.edit.title=Edit Survey
