--- a/SurveyTool/WebContent/_locales/lang_es.properties
+++ b/SurveyTool/WebContent/_locales/lang_es.properties
@@ -208,6 +208,7 @@ survey.new.label.survey_title=Título de la encuesta
 survey.new.label.project=para el proyecto
 survey.new.label.short_description=descripción corta (Opcional)
 survey.new.placeholder.project=Insertar nombre proyecto_
+survey.new.default.language = Lenguaje por defecto
 
 survey.edit.tab.go_edit=Ir a editar encuesta
 survey.edit.title=Editar Encuesta
@@ -274,6 +275,7 @@ header.log.out = Salir
 header.log.out.message = Estas seguro que deseas salir de la sesión?
 header.log.out.yes = Si
 header.log.out.no = No
+
 
 #******************
 # profile user
