Modo multidioma completo

--- a/SurveyTool/WebContent/_locales/lang_es.properties
+++ b/SurveyTool/WebContent/_locales/lang_es.properties
@@ -271,7 +271,7 @@ survey.select.question.type= Selecciona un tipo de pregunta
 survey.type.text= Texto
 survey.type.simple= Simple
 survey.type.multiple= Multiple
-survey.type.scale= Escale
+survey.type.scale= Escala
 survey.type.ordering= Orden
 survey.type.grading= clasificación
 survey.type.matrix= Matriz
