Responses number of surveys and polls

--- a/SurveyTool/WebContent/_locales/lang_en.properties
+++ b/SurveyTool/WebContent/_locales/lang_en.properties
@@ -101,8 +101,10 @@ survey_manager.surveys.table.caption=Surveys list
 survey_manager.surveys.table.column.deadline=*Deadline*
 survey_manager.surveys.table.column.survey=Survey
 survey_manager.surveys.table.column.progress=Fullfilment Progress
+survey_manager.surveys.table.column.num_responses=Answered surveys
 survey_manager.surveys.table.column.actions=Actions
 survey_manager.surveys.msg.no_surveys=There are not surveys created by you.
+survey_manager.surveys.table.survey_responses=surveys
 
 #Polls
 survey_manager.polls.title=Online polling tool
@@ -112,7 +114,9 @@ survey_manager.polls.table.column.deadline=*Deadline*
 survey_manager.polls.table.column.poll=Poll
 survey_manager.polls.table.column.url=Poll URL
 survey_manager.polls.table.column.actions=Actions
+survey_manager.polls.table.column.num_responses=Answered polls
 survey_manager.polls.msg.no_polls=There are not polls created by you.
+survey_manager.polls.table.poll_responses=polls
 
 #******************
 # Question
