poll insert code

--- a/SurveyTool/WebContent/_locales/lang_en.properties
+++ b/SurveyTool/WebContent/_locales/lang_en.properties
@@ -186,6 +186,13 @@ poll.new.placeholder.link_url=Type here_ (e.g. http://www.surveytool.com)
 
 poll.preview.title=Poll Preview
 poll.preview.iframe.title=widget poll survey
+poll.preview.section.preview=Preview
+poll.preview.section.insert=Insert
+poll.preview.label.code=Poll code to insert
+poll.preview.legend.size=Poll size
+poll.preview.size.label.width=width
+poll.preview.size.label.height=height
+poll.preview.size.label.pixels=pixels
 
 #******************
 # File
