nuevos tipos de preguntas y preview

--- a/SurveyTool/WebContent/_locales/lang_en2.properties
+++ b/SurveyTool/WebContent/_locales/lang_en2.properties
@@ -2,14 +2,14 @@
 # Master Page
 #******************
 
-master.header.title=Survey Tool & User Panel
-master.header.subtitle=Participate in surveys you are interested in
+master.header.title=Accessible user feedback tools
+master.header.subtitle=Building sustainable meaningful consumer-developer connections
 master.footer.link.about=About P4A_Survey
 master.footer.link.legal=Legal disclaimer
 master.footer.link.cookies=Cookies policy
 master.footer.link.accessibility=Accessibility
 master.footer.link.contact=Contact information
-master.footer.content=Project disclaimer & logos. Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen.
+master.footer.content=This service is provided by ILUNION Technology & Accessibility in the context of the Prosperity4All project. This project has received funding from the European Union\u2019s Seventh Framework Programme for research, technological development and demonstration under grant agreement no 610510.
 
 #******************
 # Buttons
@@ -27,8 +27,10 @@ button.accept=Accept
 button.add_content.question=Question
 button.add_content.body=Body content
 button.add_content.page_break=page-break
-button.add_file=Add file
+button.add_file=Add new file
 button.add_option=Add option
+button.add_row=Add row
+button.add_column=Add column
 button.cancel=Cancel
 button.close=Close
 button.create=Create
@@ -39,6 +41,7 @@ button.remove_file=Remove file
 button.remove_option=Remove option
 button.remove_question=Remove question
 button.send=Send
+button.login=Login
 button.submit=Submit
 button.survey_preview=Survey preview
 button.vote=Vote
@@ -60,6 +63,10 @@ language.es=Spanish
 #******************
 
 placeholder.type_here=Type here_
+placeholder.type_label=Type the label for other field here_
+placeholder.type_textLength=Type max number characters_
+placeholder.type_minValue=Type min value_
+placeholder.type_maxValue=Type max value_
 label.yes=Yes
 label.no=No
 
@@ -84,6 +91,12 @@ user_panel.link.statistics=Panel statistics
 user_panel.link.settings=Panel settings
 
 #******************
+# Survey Engine
+#******************
+
+survey_engine.question.title=Question
+
+#******************
 # Survey Manager
 #******************
 
@@ -94,8 +107,8 @@ survey_manager.tab.polls=Polls
 survey_manager.table.content.none=none
 
 #Surveys
-survey_manager.surveys.title=Surveys
-survey_manager.surveys.description=<p>Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen. No sólo sobrevivió 500 años, sino que tambien ingresó como texto de relleno en documentos electrónicos, quedando esencialmente igual al original. Fue popularizado en los 60s con la creación de las hojas "Letraset", las cuales contenian pasajes de Lorem Ipsum, y más recientemente con software de autoedición, como por ejemplo Aldus PageMaker, el cual incluye versiones de Lorem Ipsum.</p><p>Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen.</p>
+survey_manager.surveys.title=Online survey tool
+survey_manager.surveys.description=<p>Here you can create and share online surveys. Currently, surveys can include three different types of questions: text questions, multiple choice questions (checkboxes) and simple choice questions (radiobuttons).</p><p>Click on <strong>Create new</strong> to design your first survey!</p>
 survey_manager.surveys.table.caption=Surveys list
 survey_manager.surveys.table.column.deadline=*Deadline*
 survey_manager.surveys.table.column.survey=Survey
@@ -104,8 +117,8 @@ survey_manager.surveys.table.column.actions=Actions
 survey_manager.surveys.msg.no_surveys=There are not surveys created by you.
 
 #Polls
-survey_manager.polls.title=Polls
-survey_manager.polls.description=<p>Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen. No sólo sobrevivió 500 años, sino que tambien ingresó como texto de relleno en documentos electrónicos, quedando esencialmente igual al original. Fue popularizado en los 60s con la creación de las hojas "Letraset", las cuales contenian pasajes de Lorem Ipsum, y más recientemente con software de autoedición, como por ejemplo Aldus PageMaker, el cual incluye versiones de Lorem Ipsum.</p><p>Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen.</p>
+survey_manager.polls.title=Online polling tool
+survey_manager.polls.description=<p>Here you can create and share online polls. Currently, online polls include the following features:</p><ul class="list-content"><li>Polls as simple choice questions (radiobuttons)</li><li>Current results are shown automatically after voting</li><li>Polls can be personalized including an acknowledgement text and an a link to direct users for further feedback (e.g. to product page)</li></ul><p>Click on Create new to design your first online poll!</p>
 survey_manager.polls.table.caption=Polls list
 survey_manager.polls.table.column.deadline=*Deadline*
 survey_manager.polls.table.column.poll=Poll
@@ -118,22 +131,73 @@ survey_manager.polls.msg.no_polls=There are not polls created by you.
 #******************
 
 question.statement=Question statement
+question.otherLength=Other field length
 question.mandatory=Mandatory
+question.notAnswerRequeried=Optional
 question.edit.legend.options=Options
 question.edit.placeholder.option=Option
 question.edit.aria_label.option=Option title
-question.edit.description.title=Description (Optional)
+question.edit.statementSetting.title=Statements settings
+question.edit.description.title=Description / Instructions
 question.edit.description.aria_label=Description question
 question.edit.files.title=Question Files
 question.edit.response_settings.title=Response settings
+question.edit.type=Type
 
+question.edit.matrix.type.simple=Simple
+question.edit.matrix.type.multiple=Multiple
+question.edit.matrix.type.pulldown=Pull-down list
+question.edit.matrix.type.free=Free answer
+
+question.matrix.rowoption=Items (rows)
+question.matrix.columnoption=Scale labels (columns)
+
+question.long.chars=Character limit
+question.long.chars.label=Set limit to
+question.long.chars.type=letters o numbers
+question.long.lines=Textarea size
+question.long.lines.numberChars=Adjust area lines to number of characters
+question.long.lines.set=Set to
+question.long.lines.set.type=lines
+
+question.new.question_type = Select question type
 question.new.title=Add new question
 question.new.basic_settings.title=Basic settings
 question.new.basic_settings.aria_label.close=Close basic settings
+question.new.formfield=Form field
+question.new.paragraph=Paragraph
+question.new.multiple=Multiple
+question.new.simple=Simple
+question.new.ordering=Ordering
+question.new.grading=Grading
+question.new.matrix=Matrix
+question.new.scale=Scale
+question.new.code=Code
 
-question.form.scale.liker_legend.t_disgree=Totally disgree
+question.form.scale.liker_legend.t_disgree=Totally disagree
 question.form.scale.liker_legend.indiferent=Indiferent
 question.form.scale.liker_legend.t_agree=Totally agree
+
+question.form.options.text.inputTextBoxInput=Input mode
+question.form.options.text.inputTextBoxInput.free=Free text
+question.form.options.text.inputTextBoxInput.pulldown=Pull down menu
+
+question.form.options.text.inputTextBoxType=Input type
+question.form.options.text.inputTextBoxType.numerical=Number
+question.form.options.text.inputTextBoxType.text=Text
+question.form.options.text.inputTextBoxType.general=General
+
+question.form.options.text.chars=Characters limit
+question.form.options.text.charshelp=letters or numbers
+question.form.options.text.minNumericalValue=Numbers between
+question.form.options.text.maxNumericalValue=and
+question.form.options.text.decimalValue=Allow decimals
+question.form.options.text.decimalNumbers=numbers after comma
+question.form.options.text.range=Limit values
+
+question.form.options.other=Other label field
+question.form.responsesettings=Type matrix question
+
 
 #******************
 # Survey
