--- a/SurveyTool/WebContent/_locales/lang_en.properties
+++ b/SurveyTool/WebContent/_locales/lang_en.properties
@@ -188,11 +188,14 @@ poll.preview.title=Poll Preview
 poll.preview.iframe.title=widget poll survey
 poll.preview.section.preview=Preview
 poll.preview.section.insert=Insert
+poll.preview.section.url=Url
 poll.preview.label.code=Poll code to insert
 poll.preview.legend.size=Poll size
 poll.preview.size.label.width=width
 poll.preview.size.label.height=height
 poll.preview.size.label.pixels=pixels
+poll.preview.label.url=Poll url
+
 
 #******************
 # File
