changes in layout of questions and in the name of options selected to be stored

--- a/SurveyTool/WebContent/_locales/lang_en.properties
+++ b/SurveyTool/WebContent/_locales/lang_en.properties
@@ -187,7 +187,7 @@ question.form.options.text.inputTextBoxType.numerical=Number
 question.form.options.text.inputTextBoxType.text=Text
 question.form.options.text.inputTextBoxType.general=General
 
-question.form.options.text.chars=Characters limit
+question.form.options.text.chars=Chars limit
 question.form.options.text.charshelp=letters or numbers
 question.form.options.text.minNumericalValue=Numbers between
 question.form.options.text.maxNumericalValue=and
