--- a/SurveyTool/WebContent/_locales/lang_es.properties
+++ b/SurveyTool/WebContent/_locales/lang_es.properties
@@ -91,6 +91,12 @@ user_panel.link.statistics=Panel statistics
 user_panel.link.settings=Panel settings
 
 #******************
+# Survey Engine
+#******************
+
+survey_engine.question.title=Question
+
+#******************
 # Survey Manager
 #******************
 
@@ -99,12 +105,6 @@ survey_manager.tab.surveys=Surveys
 survey_manager.tab.polls=Polls
 
 survey_manager.table.content.none=none
-
-#******************
-# Survey Engine
-#******************
-
-survey_engine.question.title=Question
 
 #Surveys
 survey_manager.surveys.title=Online survey tool
@@ -187,7 +187,7 @@ question.form.options.text.inputTextBoxType.numerical=Number
 question.form.options.text.inputTextBoxType.text=Text
 question.form.options.text.inputTextBoxType.general=General
 
-question.form.options.text.chars=Characters limit
+question.form.options.text.chars=Chars limit
 question.form.options.text.charshelp=letters or numbers
 question.form.options.text.minNumericalValue=Numbers between
 question.form.options.text.maxNumericalValue=and
