--- a/SurveyTool/WebContent/_locales/lang_es.properties
+++ b/SurveyTool/WebContent/_locales/lang_es.properties
@@ -186,6 +186,8 @@ question.form.options.text.inputTextBoxType=Input type
 question.form.options.text.inputTextBoxType.numerical=Number
 question.form.options.text.inputTextBoxType.text=Text
 question.form.options.text.inputTextBoxType.general=General
+question.form.options.text.inputTextBoxType.custom=Custom
+question.form.options.text.inputTextBoxType.range=Range
 
 question.form.options.text.chars=Chars limit
 question.form.options.text.charshelp=letters or numbers
