--- a/SurveyTool/WebContent/_locales/lang_es.properties
+++ b/SurveyTool/WebContent/_locales/lang_es.properties
@@ -95,6 +95,7 @@ user_panel.link.settings=Panel settings
 #******************
 
 survey_engine.question.title=Question
+question.chooseOne=Chose one option
 
 #******************
 # Survey Manager
@@ -142,6 +143,7 @@ question.edit.description.title=Description / Instructions
 question.edit.description.aria_label=Description question
 question.edit.files.title=Question Files
 question.edit.response_settings.title=Response settings
+question.edit.custom_settings.title=Custom options
 question.edit.type=Type
 
 question.edit.matrix.type.simple=Simple
