--- a/SurveyTool/WebContent/_locales/lang_es.properties
+++ b/SurveyTool/WebContent/_locales/lang_es.properties
@@ -269,3 +269,22 @@ file.import.alt.preview=Preview image. Add alternative text in the next fields.
 confirmation.title=Confirmation
 confirmation.remove.title=Remove element
 confirmation.remove.message=Are you sure to remove <span class="elem-to-remove-text" id="elementToRemoveText"></span>?
+
+#******************
+# Accesibility
+#******************
+accesibility.question.mandatory = Mandatory
+accesibility.question.type=Question type
+accesibility.question.matrix.type = Matrix type selector
+accesibility.question.matrix.remove.item= Remove item
+accesibility.question.matrix.add.item= Add item
+accesibility.question.matrix.remove.column= Remove column
+accesibility.question.matrix.add.column=Add column
+accesibility.question.matrix.input.column= Input text for column
+accesibility.question.matrix.input.row= Input text for row
+accesibility.question.option=Input text for option
+accesibility.question.remove.option=Remove option
+accesibility.question.add.option=Add option
+accesibility.question.image=Question image
+accesibility.question.longtextAnswer= Textarea to input your answer
+accesibility.question.shorttextAnswer= Textarea to input your answer
