Solving merge issues

--- a/SurveyTool/WebContent/_locales/lang_en.properties
+++ b/SurveyTool/WebContent/_locales/lang_en.properties
@@ -42,6 +42,7 @@ button.remove_option=Remove option
 button.remove_question=Remove question
 button.send=Send
 button.login=Login
+button.register=Register
 button.submit=Submit
 button.survey_preview=Survey preview
 button.vote=Vote
@@ -82,6 +83,13 @@ home.title=Home
 home.login.title=Login
 home.login.label.username=Username
 home.login.label.password=Password
+home.register.title=Register
+home.register.label.username=User name
+home.register.label.email=Email
+home.register.label.password=Password
+home.register.label.repassword=Repeat the password
+home.register.label.registeruser=User register
+home.register.label.login=User login
 
 #******************
 # Header
