--- a/SurveyTool/WebContent/_locales/lang_es.properties
+++ b/SurveyTool/WebContent/_locales/lang_es.properties
@@ -44,6 +44,8 @@ button.add_content.body=Contenido del cuerpo
 button.add_content.page_break=salto de página
 button.add_file=Agregar fichero
 button.add_option=Agregar opción
+button.add_row=Añadir fila
+button.add_column=Añadir columna
 button.cancel=Cancelar
 button.close=Cerrar
 button.create=Crear
@@ -77,6 +79,10 @@ language.es=Español
 #******************
 
 placeholder.type_here=Escriba aquí_
+placeholder.type_label=Escriba la etiqueta para otros campos aquí_
+placeholder.type_textLength=Escriba el número máximo de caracteres_
+placeholder.type_minValue=Escriba el valor mínimo_
+placeholder.type_maxValue=Escriba el valor máximo_
 label.yes=Si
 label.no=No
 login.invalid = Nombre de usuario o contraseña invalido
@@ -99,6 +105,17 @@ home.register.label.password=Contraseña
 home.register.label.repassword=Reescriba Contraseña
 home.register.label.registeruser=Registrar usuario
 home.register.label.login=Inicio sesión usuario
+
+#******************
+# header
+#******************
+
+header.hello = Hola
+header.edit.profile = Editar mi perfil
+header.log.out = Salir
+header.log.out.message = Estas seguro que deseas salir de la sesión?
+header.log.out.yes = Si
+header.log.out.no = No
 
 #******************
 # User Panel
@@ -135,8 +152,10 @@ survey_manager.surveys.table.caption=Lista de encuestas
 survey_manager.surveys.table.column.deadline=*Fecha tope*
 survey_manager.surveys.table.column.survey=Encuesta
 survey_manager.surveys.table.column.progress=Llenado progreso
+survey_manager.surveys.table.column.num_responses=Encuestas respondidas
 survey_manager.surveys.table.column.actions=Acciones
 survey_manager.surveys.msg.no_surveys=No hay encuestas creadas por ti.
+survey_manager.surveys.table.survey_responses=encuestas
 
 #Polls
 survey_manager.polls.title=Herramienta de sondeo en línea
@@ -146,56 +165,89 @@ survey_manager.polls.table.column.deadline=*Fecha tope*
 survey_manager.polls.table.column.poll=Poll
 survey_manager.polls.table.column.url=Poll URL
 survey_manager.polls.table.column.actions=Acciones
+survey_manager.polls.table.column.num_responses=Polls respondidos
 survey_manager.polls.msg.no_polls=No hay encuestas creadas por ti.
+survey_manager.polls.table.poll_responses=polls
 
 #******************
 # Question
 #******************
 
 question.statement=Contenido pregunta
+question.otherLength=Tamaño de otros campos
 question.mandatory=Obligatorio
+question.notAnswerRequeried=Opcional
 question.edit.legend.options=Opciones
 question.edit.placeholder.option=Opcion
-question.edit.aria_label.option=Titulo opcional
-question.edit.description.title=Descripción (Opcional)
+question.edit.aria_label.option=Titulo de la opción
+question.edit.statementSetting.title=Configuración de la pregunta
+question.edit.description.title=Descripción / Instrucciones
 question.edit.description.aria_label=Descripción de la pregunta
 question.edit.files.title=Ficheros de la pregunta
-question.edit.response_settings.title=Configuracion respuesta
+question.edit.response_settings.title=Configuración respuesta
+question.edit.custom_settings.title=Opciones de personalización
+question.edit.type=Tipo
 
+question.edit.matrix.type.simple=Simple
+question.edit.matrix.type.multiple=Multiple
+question.edit.matrix.type.pulldown=Lista pull-down
+question.edit.matrix.type.free=Respuesta libre
+
+question.matrix.rowoption=Elementos (filas)
+question.matrix.columnoption=Etiquetas de escala (columnas)
+
+question.long.chars=Limite de caracteres
+question.long.chars.label=Configurar limite para
+question.long.chars.type=letras y números
+question.long.lines=Tamaño del textarea
+question.long.lines.numberChars=Ajustar las lineas del area al número de caracteres
+question.long.lines.set=Configurar para
+question.long.lines.set.type=lineas
+
+question.new.question_type = Seleccionar tipo de pregunta
 question.new.title=Añadir nueva pregunta
 question.new.basic_settings.title=Configuración basica
 question.new.basic_settings.aria_label.close=Cerrar configuración basica.
+question.new.formfield=Campo de formulario
+question.new.paragraph=Parrafo
+question.new.multiple=Multiple
+question.new.simple=Simple
+question.new.ordering=Ordenado
+question.new.grading=Calificación
+question.new.matrix=Matriz
+question.new.scale=Escala
+question.new.code=Código
 
 question.form.scale.liker_legend.t_disgree=Totalmente en desacuerdo
 question.form.scale.liker_legend.indiferent=Indiferente
 question.form.scale.liker_legend.t_agree=Totalmente de acuerdo
 
+question.form.options.text.inputTextBoxInput=Modo de entrada
+question.form.options.text.inputTextBoxInput.free=Texto libre
+question.form.options.text.inputTextBoxInput.pulldown=Menú desplegable
+
+question.form.options.text.inputTextBoxType=Tipo de entrada
+question.form.options.text.inputTextBoxType.numerical=Número
+question.form.options.text.inputTextBoxType.text=Texto
+question.form.options.text.inputTextBoxType.general=General
+question.form.options.text.inputTextBoxType.custom=Personalizado
+question.form.options.text.inputTextBoxType.range=Rango
+
+question.form.options.text.chars=Limite de Caracteres
+question.form.options.text.charshelp=letras y números
+question.form.options.text.minNumericalValue=Números entre
+question.form.options.text.maxNumericalValue=y
+question.form.options.text.decimalValue=Permitir decimales
+question.form.options.text.decimalNumbers=Números despues de la coma
+question.form.options.text.range=Limite de valores
+
+question.form.options.other=Etiqueta de campo "Otro"
+question.form.responsesettings=Tipo de pregunta matriz
+
 question.form.options = Opciones
 question.form.type = Tipo
 question.form.scale.likert = escala Likert
 question.form.example = Ejemplo P.1
-
-question.form.options.text.inputTextBoxInput=Input mode
-question.form.options.text.inputTextBoxInput.free=Free text
-question.form.options.text.inputTextBoxInput.pulldown=Pull down menu
-
-question.form.options.text.inputTextBoxType=Input type
-question.form.options.text.inputTextBoxType.numerical=Number
-question.form.options.text.inputTextBoxType.text=Text
-question.form.options.text.inputTextBoxType.general=General
-question.form.options.text.inputTextBoxType.custom=Custom
-question.form.options.text.inputTextBoxType.range=Range
-
-question.form.options.text.chars=Chars limit
-question.form.options.text.charshelp=letters or numbers
-question.form.options.text.minNumericalValue=Numbers between
-question.form.options.text.maxNumericalValue=and
-question.form.options.text.decimalValue=Allow decimals
-question.form.options.text.decimalNumbers=numbers after comma
-question.form.options.text.range=Limit values
-
-question.form.options.other=Other label field
-question.form.responsesettings=Type matrix question
 
 
 #******************
@@ -245,6 +297,16 @@ poll.new.placeholder.link_url=Escriba aquí_ (Por ej. http://www.surveytool.com)
 
 poll.preview.title=Previsualización del poll
 poll.preview.iframe.title=widget poll encuesta
+poll.preview.section.preview=Previsualización
+poll.preview.section.insert=Insertar
+poll.preview.section.url=Url
+poll.preview.label.code=Código del poll para insertar
+poll.preview.legend.size=Tamaño del poll
+poll.preview.size.label.width=ancho
+poll.preview.size.label.height=alto
+poll.preview.size.label.pixels=pixels
+poll.preview.label.url=URL del poll
+
 
 #******************
 # File
@@ -267,15 +329,23 @@ confirmation.remove.title=Borrar elemento
 confirmation.remove.message=Estas tu seguro que quieres borrarlo<span class="elem-to-remove-text" id="elementToRemoveText"></span>?
 
 #******************
-# header
+# Accesibility
 #******************
-header.hello = Hola
-header.edit.profile = Editar mi perfil
-header.log.out = Salir
-header.log.out.message = Estas seguro que deseas salir de la sesión?
-header.log.out.yes = Si
-header.log.out.no = No
-
+accesibility.question.mandatory = Obligatorio
+accesibility.question.type=Tipo de pregunta
+accesibility.question.matrix.type = Selección de tipo de matriz
+accesibility.question.matrix.remove.item= Eliminar elemento
+accesibility.question.matrix.add.item= Añadir elemento
+accesibility.question.matrix.remove.column= Eliminar columna
+accesibility.question.matrix.add.column=Añadir columna
+accesibility.question.matrix.input.column= Introducir texto para columna
+accesibility.question.matrix.input.row= Introducir texto para fila
+accesibility.question.option=Introducir texto para opción
+accesibility.question.remove.option=Eliminar opción
+accesibility.question.add.option=Añadir opción
+accesibility.question.image=Imagen de la pregunta
+accesibility.question.longtextAnswer= Textarea para introducir tu respuesta
+accesibility.question.shorttextAnswer= Textarea para introducir tu respuesta
 
 #******************
 # profile user
