Cambios Perfil de usuario y ediccion encuesta

--- a/SurveyTool/WebContent/_locales/lang_en.properties
+++ b/SurveyTool/WebContent/_locales/lang_en.properties
@@ -19,7 +19,7 @@ msg.error.empty_fields=Should fill all fields.
 msg.error.login.empty.username=Type your username
 msg.error.login.username.length=Type a username that has between 4 and 16 characters.
 msg.error.login.email=Type a valid email
-msg.error.login.empty.password=Type your password
+msg.error.login.empty.password=Type your password at least 8 characters.
 msg.error.login.repassword=This field does not match the password
 
 msg.error.newsurvey.title=Type a Survey title
