--- a/SurveyTool/WebContent/_locales/lang_es.properties
+++ b/SurveyTool/WebContent/_locales/lang_es.properties
@@ -19,7 +19,7 @@ msg.error.empty_fields=Debe llenar todos los campos
 msg.error.login.empty.username=Escriba su nombre de usuario
 msg.error.login.username.length=Escriba un nombre de usuario que tiene entre 4 y 16 caracteres
 msg.error.login.email=Escriba un correo electrónico válido
-msg.error.login.empty.password=Escriba su contraseña
+msg.error.login.empty.password=Escriba su contraseña de al menos 8 caracteres.
 msg.error.login.repassword=Este campo no coincide con la contraseña
 
 msg.error.newsurvey.title=Escriba un título Encuesta
