import file and videos in question solved

--- a/SurveyTool/WebContent/_locales/lang_en.properties
+++ b/SurveyTool/WebContent/_locales/lang_en.properties
@@ -39,6 +39,7 @@ button.create_new=+ Create new
 button.hide_question=Hide question
 button.import=Import
 button.remove_file=Remove file
+button.remove_video=Remove video
 button.remove_option=Remove option
 button.remove_question=Remove question
 button.send=Send
@@ -306,6 +307,11 @@ file.import.label.title=Title
 file.import.label.alt=Alternative text
 file.import.label.img_selected=Image selected
 file.import.alt.preview=Preview image. Add alternative text in the next fields.
+
+file.import.label.select.type=Select file type
+file.import.label.select.none=-- Choose type --
+file.import.label.video_url=Video URL
+file.import.label.description=Description
 
 file.edit.title=Edit file information
 file.edit.image=Image
