--- a/SurveyTool/WebContent/_locales/lang_es.properties
+++ b/SurveyTool/WebContent/_locales/lang_es.properties
@@ -55,6 +55,7 @@ button.create_new=+ Crear nuevo
 button.hide_question=Ocultar pregunta
 button.import=Importar
 button.remove_file=Borrar fichero
+button.remove_video=Borrar video
 button.remove_option=Borrar opción
 button.remove_question=Borrar pregunta
 button.send=Enviar
@@ -134,8 +135,8 @@ user_panel.link.settings=Panel configuración
 # Survey Engine
 #******************
 
-survey_engine.question.title=Question
-question.chooseOne=Chose one option
+survey_engine.question.title=Pregunta
+question.chooseOne=Elige una opción
 
 #******************
 # Survey Manager
@@ -323,6 +324,11 @@ file.import.label.title=Titulo
 file.import.label.alt=Texto alternativo
 file.import.label.img_selected=Imagen seleccionada
 file.import.alt.preview=Previsualizacion de imagen. Añade texto alternativo in los siguientes campos.
+
+file.import.label.select.type=Selecciona el tipo de archivo
+file.import.label.select.none=-- Elige un tipo --
+file.import.label.video_url=URL del video
+file.import.label.description=Descripción
 
 file.edit.title=Edit file information
 file.edit.image=Image
